--- a/package.json
+++ b/package.json
@@ -22,12 +22,21 @@
     "@angular/router": "^7.2.2",
     "@ionic-native/camera": "^5.8.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/document-viewer": "^5.8.0",
+    "@ionic-native/file": "^5.8.0",
+    "@ionic-native/file-opener": "^5.8.0",
+    "@ionic-native/file-transfer": "^5.8.0",
+    "@ionic-native/photo-viewer": "^5.8.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
-    "cordova-android": "^8.0.0",
+    "cordova-android": "8.0.0",
     "cordova-ios": "5.0.1",
     "cordova-plugin-camera": "4.0.3",
+    "cordova-plugin-document-viewer": "0.9.11",
+    "cordova-plugin-file": "6.0.1",
+    "cordova-plugin-file-opener2": "2.2.0",
+    "cordova-plugin-file-transfer": "1.7.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -74,7 +83,13 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-opener2": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-document-viewer": {}
     },
     "platforms": [
       "ios",
