--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "com-sarriaroman-photoviewer": "^1.2.2",
     "cordova-android": "8.0.0",
     "cordova-ios": "5.0.1",
     "cordova-plugin-camera": "4.0.3",
@@ -89,7 +90,8 @@
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
       "cordova-plugin-file-transfer": {},
-      "cordova-plugin-document-viewer": {}
+      "cordova-plugin-document-viewer": {},
+      "com-sarriaroman-photoviewer": {}
     },
     "platforms": [
       "ios",
