--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/photo-viewer": "^5.8.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/text-to-speech": "^5.8.0",
     "@ionic/angular": "^4.1.0",
     "cordova-android": "8.0.0",
     "cordova-ios": "5.0.1",
@@ -37,7 +38,9 @@
     "cordova-plugin-file": "6.0.1",
     "cordova-plugin-file-opener2": "2.2.0",
     "cordova-plugin-file-transfer": "1.7.1",
+    "cordova-plugin-tts": "^0.2.3",
     "core-js": "^2.5.4",
+    "ionic": "^5.0.3",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
@@ -81,7 +84,9 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-camera": {},
       "cordova-plugin-file": {},
@@ -89,7 +94,8 @@
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
       "cordova-plugin-file-transfer": {},
-      "cordova-plugin-document-viewer": {}
+      "cordova-plugin-document-viewer": {},
+      "cordova-plugin-tts": {}
     },
     "platforms": [
       "ios",
