--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/file": "^5.8.0",
     "@ionic-native/file-opener": "^5.8.0",
     "@ionic-native/file-transfer": "^5.8.0",
+    "@ionic-native/in-app-browser": "^5.8.0",
     "@ionic-native/photo-viewer": "^5.8.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -39,6 +40,7 @@
     "cordova-plugin-file": "6.0.1",
     "cordova-plugin-file-opener2": "2.2.0",
     "cordova-plugin-file-transfer": "1.7.1",
+    "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-tts": "^0.2.3",
     "core-js": "^2.5.4",
     "ionic": "^5.0.3",
@@ -97,7 +99,8 @@
       "cordova-plugin-file-transfer": {},
       "cordova-plugin-document-viewer": {},
       "cordova-plugin-tts": {},
-      "com-sarriaroman-photoviewer": {}
+      "com-sarriaroman-photoviewer": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "ios",
