--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "@ionic-native/file": "^5.8.0",
     "@ionic-native/file-opener": "^5.8.0",
     "@ionic-native/file-transfer": "^5.8.0",
-    "@ionic-native/in-app-browser": "^5.8.0",
     "@ionic-native/http": "^5.8.0",
+    "@ionic-native/in-app-browser": "^5.8.0",
     "@ionic-native/photo-viewer": "^5.8.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/text-to-speech": "^5.8.0",
     "@ionic/angular": "^4.1.0",
+    "@ionic/storage": "^2.2.0",
     "com-sarriaroman-photoviewer": "^1.2.2",
     "cordova-android": "8.0.0",
     "cordova-ios": "5.0.1",
